fix marks sending move google config to yaml